objects/Solution.object
<CustomObject><fields>
        <fullName>Article_Title__c</fullName>
        <formula>SolutionName</formula>
        <label>Article Title</label>
        <type>Text</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Global__c</fullName>
        <label>Applicable Region</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia-Pac</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Internal_Notes__c</fullName>
        <description>Not visible to cusotmers</description>
        <inlineHelpText>This information is not visible to the customers in Portal\</inlineHelpText>
        <label>Internal Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Org_Cust_Case_ID__c</fullName>
        <label>Org Cust Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_Audience__c</fullName>
        <label>Primary Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Personnel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Technician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre Sales Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Engineer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Solution_Expiration_Date__c</fullName>
        <label>Solution Expiration Date</label>
        <type>Date</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>false</enableFeeds><listViews>
        <fullName>AllReviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Reviewed Solutions</label>
    </listViews><listViews>
        <fullName>AllUnreviewedSolutions</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SOLUTION.STATUS_CODE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Unreviewed Solutions</label>
    </listViews></CustomObject>